--- a/manifests/production/kustomization.yaml
+++ b/manifests/production/kustomization.yaml
@@ -4,17 +4,14 @@ kind: Kustomization
 namespace: davtrografanalokitempo
 
 resources:
-- ../base
-- ../../monitoring/monitoring-namespace.yaml
-- ../../monitoring/prometheus.yaml
-- ../../monitoring/grafana.yaml
-- ../../monitoring/loki.yaml
-- ../../monitoring/tempo.yaml
+  - ../base
+  - monitoring/monitoring-namespace.yaml
+  - monitoring/prometheus.yaml
+  - monitoring/grafana.yaml
+  - monitoring/loki.yaml
+  - monitoring/tempo.yaml
 
 images:
-- name: ghcr.io/exea-centrum/website-argocd-k8s-githubactions-kustomize-kyverno05
-  newName: ghcr.io/exea-centrum/website-argocd-k8s-githubactions-kustomize-kyverno05
-  newTag: latest
-- name: website-argocd-k8s-githubactions-kustomize-kyverno05
-  newName: ghcr.io/exea-centrum/website-argocd-k8s-githubactions-kustomize-kyverno05
-  newTag: 951bb266c1e9958e6a1e0e4b0a895097b847322e
+  - name: ghcr.io/exea-centrum/website-argocd-k8s-githubactions-kustomize-kyverno05
+    newName: ghcr.io/exea-centrum/website-argocd-k8s-githubactions-kustomize-kyverno05
+    newTag: latest
