--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: website-argocd-k8s-githubactions-kustomize-kyverno05-app
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
@@ -17,9 +19,9 @@ spec:
       prune: true
       selfHeal: true
     syncOptions:
-      - CreateNamespace=true
+    - CreateNamespace=true
   ignoreDifferences:
-    - group: apps
-      kind: Deployment
-      jsonPointers:
-        - /spec/replicas
+  - group: apps
+    kind: Deployment
+    jsonPointers:
+    - /spec/replicas
