--- a/manifests/production/monitoring/loki.yaml
+++ b/manifests/production/monitoring/loki.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: loki
-  namespace: monitoring
+  namespace: davtrografanalokitempo
   labels:
     app: loki
 spec:
@@ -34,7 +34,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: loki-service
-  namespace: monitoring
+  namespace: davtrografanalokitempo
 spec:
   selector:
     app: loki
