--- a/manifests/base/postgres.yaml
+++ b/manifests/base/postgres.yaml
@@ -41,7 +41,8 @@ spec:
             cpu: "200m"
       volumes:
       - name: postgres-data
-        emptyDir: {}
+        persistentVolumeClaim:
+          claimName: postgres-pvc
 ---
 apiVersion: v1
 kind: Service
@@ -59,3 +60,15 @@ spec:
     targetPort: 5432
     protocol: TCP
   type: ClusterIP
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-pvc
+  namespace: davtrografanalokitempo
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
